examples/test/testpolicy12254.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12254
  namespace: namespace42
spec:
  podSelector:
    matchLabels:
      key9: value22
      key7: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value7
          key44: value41
          key21: value24
      podSelector:
        matchLabels:
          key10: value3
          key47: value26
          key42: value22
